# CogniStep

./: .gitignore  Dockerfile  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
cognistep_env/: Dockerfile  PROJECT_PURPOSE.md  README.md  client.py  inference.py  openenv.yaml  pyproject.toml
cognistep_env/server/: Dockerfile  __init__.py  grader.py
edtech_env/: README.md  __init__.py  hackathon.md  inference.py  models.py  openenv.yaml  pyproject.toml
edtech_env/server/: Dockerfile  app.py  environment.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  grader.py
