[project]
name = "cognistep-inference"
version = "0.1.0"
description = "Inference runner for CogniStep EdTech OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "openenv-core>=0.2.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "huggingface-hub>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cognistep_env*"]
